[tool.poetry]
name = "vocab-registry"
version = "0.1.0"
description = ""
readme = "README.md"
package-mode = false
packages = [
    { include = "registry" }
]

[tool.poetry.dependencies]
python = "^3.12"
Flask = "^3.0.3"
Flask-Cors = "^4.0.1"
Flask-pyoidc = "^3.14.3"
pydantic = "^2.8.2"
elasticsearch = "^8.15.0"
lxml = "^5.3.0"
elementpath = "^4.4.0"

[tool.poetry.group.prod]
optional = true

[tool.poetry.group.prod.dependencies]
gunicorn = "^23.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
